2000-09-15  Jim Meyering  <meyering@lucent.com>

	* regex.c: Update from libc.

2000-09-10  Jim Meyering  <meyering@lucent.com>

	* getopt.c (_getopt_internal): Update from glibc.

2000-09-09  Jim Meyering  <meyering@lucent.com>

	* quotearg.c: Rename ISASCII to IN_CTYPE_DOMAIN, so people don't
	think it should be used as a general replacement for isascii.
	* fnmatch.c: Likewise.
	* mbswidth.c: Likewise
	* regex.c: Likewise.

	Don't use atoi.
	* userspec.c: Include sys/param.h and limits.h.
	Include xstrtol.h.
	(CHAR_BIT, TYPE_SIGNED, TYPE_MINIMUM, TYPE_MAXIMUM): Define.
	(UID_T_MAX, GID_T_MAX, MAXUID, MAXGID): Define.
	(parse_user_spec): Use xstrtoul, not atoi when converting numeric
	UID, GID.  Check range.

2000-09-06  Jim Meyering  <meyering@lucent.com>

	* getopt.c (_getopt_internal): Update from glibc.

2000-08-30  Jim Meyering  <meyering@lucent.com>

	* strftime.c: Merge in changes from GNU libc.

2000-08-26  Jim Meyering  <meyering@lucent.com>

	* closeout.c: Include "__fpending.h".
	(close_stdout_status): Return right away if there's nothing to flush.

	* Makefile.am (noinst_HEADERS): Add __fpending.h.
	* __fpending.c: New file.
	* __fpending.h: New file.

2000-08-07  Paul Eggert  <eggert@twinsun.com>

	Standardize on "memory exhausted" instead of "Memory exhausted"
	or "virtual memory exhausted".
	* obstack.c (print_and_abort): Use "memory exhausted", not
	"virtual memory exhausted".
	* same.c (same_name): Invoke xalloc_die instead of printing
	our own message.
	* userspec.c (parse_user_spec): Likewise.
	* bumpalloc.h: comment fix
	* same.c, userspec.c: Include xalloc.h.

	* xalloc.h (xalloc_msg_memory_exhausted): Now char const[],
	not char *const and pointing to a constant array.
	* xmalloc.c (xalloc_msg_memory_exhausted): Likewise.
	(xrealloc): Comment fix.

	* userspec.c (parse_user_spec):
	Don't translate a message until just before returning,
	to avoid unnecessary translation.

2000-08-07  Jim Meyering  <meyering@lucent.com>
