@@ -1,3 +1,9 @@
+2000-09-20  Jim Meyering  <meyering@lucent.com>
+
+	* Makefile.am (libfetish_a_SOURCES): Add sha.c.
+	(noinst_HEADERS): Add sha.h.
+	Based on code from Scott G. Miller and from GnuPG.
+
 2000-09-15  Jim Meyering  <meyering@lucent.com>
 
 	* regex.c: Update from libc.
